[package]
name = "csv_query"
version = "0.1.0"
edition = "2021"
authors = ["oizhaolei@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
nom = "7.1.3"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
