[package]
name = "csv_query"
authors = [ "lei.zhao <oizhaolei@gmail.com>" ]
version = "0.1.0"
edition = "2021"
description = "query a csv steam like sql-where"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
nom = "7.1.3"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }

[package.metadata.rpm.cargo]
buildflags = ["--release"]
target = "x86_64-unknown-linux-musl"

[package.metadata.rpm.targets]
csv_query = { path = "/usr/bin/csv_query" }
